--- a/style.css
+++ b/style.css
@@ -429,6 +429,11 @@ body {
 	bottom: 0;
 	width: 100%;
 }
+
+.footer a {
+    text-decoration: none;
+    
+}
 .footer .container {
     display: flex;
 }
